# fastAPIPostgres

./: docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: database.py  main.py  schemas.py
src/db/: __init__.py  init_db.py  tables.py  utils.py
