[tool.black]
exclude = "env/"

[tool.isort]
profile="black"
src_paths="src"
skip_gitignore="true"
[tool.poetry]
name = "fastapipostgres"
version = "0.1.0"
description = ""
authors = ["Ulukman Amangeldiev <ulukmanatageldiuulu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiosqlite = "^0.17.0"
asyncpg = "^0.23.0"
databases = "^0.4.3"
fastapi = "^0.65.2"
psycopg2-binary = "^2.8.6"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.8.0"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
